k8s/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.prod.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: main
  name: main
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.prod.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/webnet: 'true'
        io.kompose.service: main
    spec:
      containers:
        - args:
            - npm
            - run
            - start:dev
          image: karpully/karpully-backend:latest
          name: karpully-backend
          ports:
            - containerPort: 4000
          resources: {}
      restartPolicy: Always
      volumes:
        - name: main-claim0
          persistentVolumeClaim:
            claimName: main-claim0
        - name: main-claim1
          persistentVolumeClaim:
            claimName: main-claim1
status: {}
