k8s/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-test-client1
spec:
  restartPolicy: Never
  containers:
    - name: test-client1
      image: alpine
      command: ['/bin/sh']
      args: ['-c', "echo 'GET / HTTP/1.1\r\n\r\n' | nc redis 6379"]
