k8s/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.prod.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: main
  name: main
spec:
  type: LoadBalancer
  ports:
    - name: '4000'
      port: 4000
      targetPort: 4000
  selector:
    io.kompose.service: main
status:
  loadBalancer: {}
